Git Tests/force-app/main/default/default/objects/Bonificacao__c/Bonificacao__c.object-meta.xml
<CustomObject>
    <label>Bonificação</label>
    <nameField>
        <displayFormat>BN-{0000000}</displayFormat>
        <label>Número da Bonificação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonificações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>