Git Tests/force-app/main/default/default/objects/Bonificacao__c/fields/DataVigencia__c.field-meta.xml
<CustomField>
    <fullName>DataVigencia__c</fullName>
    <label>Data de vigência</label>
    <type>Date</type>
</CustomField>